<resources>
    <string name="app_name">Warrantree | Retailers</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closedDrawer">Closed Drawer</string>

    <string name="full_name">Aditya Mishra</string>
    <string name="validemail">aditya@upscale.in</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="reenter_password_hint">Re-enter Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="aadhar_no">Aadhar No</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="pan_no">PAN Number</string>
    <string name="six_digit_code">Enter six digit code</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>

    <string name="Rs">\u20B9</string>
    <string name="LogintoSignup">Don\'t have an account yet? Don\'t worry. Sign up to use our services using the button below</string>
    <string name="username">Enter UserName</string>
    <string name="OTP">Enter OTP</string>
    <string name="enter_mobile_number_here">Enter Mobile Number</string>
    <string name="enable_editing">Tap on the pencil icon to edit your mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="user_authentication">User Authentication</string>
    <string name="submit_details">Submit Details</string>
    <string name="enter_email_id">Enter shop\'s Email ID</string>
    <string name="enter_shop_address">Enter shop\'s Address</string>
    <string name="enter_shop_name">Enter name of the Shop</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="logon">Logon</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2_optional">Address Line 2 (Optional)</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_pin_code">Enter PIN Code</string>
    <string name="enter_country">Enter Country</string>
    <string name="submit_address">Submit Address</string>
    <string name="enter_vat_gst_tan">Enter VAT/GST/TAN</string>
    <string name="nootp1">Didn\'t receive the OPT? Click here to resend</string>
    <string name="nootp2">Edit your number before re-sending OTP</string>

    <!--TODO: For Spinner-->
    <string name="spinner_title">Choose ID Type</string>
    <string name="spinner_prompt">GST</string>

    <string-array name="shop_auth_code">
        <item>PAN</item>
        <item>GST</item>
        <item>TAN</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="my_actionbar_settings">Settings</string>
    <string name="my_actionbar_notifications">Notifications</string>
    <string name="my_actionbar_rate">Rate the App</string>
    <string name="user_profile">User Profile</string>
    <string name="ales">$ales</string>
    <string name="number_of_todays_sales">221</string>

    <!--Strings fir navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_back_description">display a simple gradient filled background</string>
    <string name="login_logo_description">displays logo of the product</string>
    <string name="latest_sales_record">Latest Sales Record</string>
    <string name="vat">VAT</string>
    <string name="gst">GST</string>
    <string name="tin">TIN</string>
    <string name="pan">PAN</string>
</resources>
