<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.android.test.warrantree_retailer.UserLogin">

    <TextView
        android:id="@+id/user_auth_pageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:text="@string/user_authentication"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_auth_MobNum_Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:textColor="#673ab7"
        android:visibility="visible"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/user_auth_MobNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number_here"
            android:inputType="phone"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSendOTP"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_80"
        android:layout_marginLeft="@dimen/margin_80"
        android:layout_marginRight="@dimen/margin_80"
        android:layout_marginStart="@dimen/margin_80"
        android:background="#FFF"
        android:text="@string/send_otp"
        android:textSize="20sp"
        android:visibility="visible" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_auth_OTP_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/user_auth_OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:maxLines="1"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/btSubmitOTP"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="#00acc1"
            android:text="@string/logon"
            android:textSize="20sp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/btEnableEditing"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:backgroundTint="#FFF"
            android:foregroundTint="@color/colorAccent"
            android:visibility="invisible"
            app:srcCompat="@android:drawable/ic_menu_edit" />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_auth_ShopName_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/user_auth_ShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_shop_name"
            android:inputType="textPersonName"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_auth_Email_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/user_auth_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_email_id"
            android:inputType="textWebEmailAddress|textEmailAddress"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_auth_EmployeeName_Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/user_auth_EmployeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_your_name"
            android:inputType="textWebEmailAddress|textEmailAddress"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_auth_vat-gst_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:errorEnabled="true">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/user_auth_vat-gst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_your_name"
            android:inputType="textVisiblePassword"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSubmitUsrDet"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_80"
        android:layout_marginLeft="@dimen/margin_80"
        android:layout_marginRight="@dimen/margin_80"
        android:layout_marginStart="@dimen/margin_80"
        android:layout_marginTop="@dimen/margin_20"
        android:background="#00acc1"
        android:text="@string/submit_details"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_edit_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center"
        android:text="@string/enable_editing"
        android:visibility="gone" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_auth_Address_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:hint="@string/enter_shop_address"
        android:orientation="vertical"
        android:visibility="gone"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/user_auth_Address_L1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress|textMultiLine"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_auth_Address_L2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/address_line_2_optional"
            android:inputType="textPostalAddress"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_auth_Address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_city"
            android:inputType="textPostalAddress"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_auth_Address_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_state"
            android:inputType="textPostalAddress"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_auth_Address_PIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_pin_code"
            android:inputType="number"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_auth_Address_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/enter_country"
            android:inputType="textPostalAddress"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSubmitShopAddress"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_80"
        android:layout_marginLeft="@dimen/margin_80"
        android:layout_marginRight="@dimen/margin_80"
        android:layout_marginStart="@dimen/margin_80"
        android:layout_marginTop="@dimen/margin_20"
        android:background="#00acc1"
        android:text="@string/submit_address"
        android:textSize="20sp"
        android:visibility="gone" />
</LinearLayout>
